// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Popper Can click outside 1`] = `
<div>
  <span
    onClick={[Function]}
    style={
      Object {
        "left": "0vw",
        "position": "relative",
        "top": "0vh",
      }
    }
  >
    Minimal Popover
  </span>
</div>
`;

exports[`Storyshots Popper Can click specific area 1`] = `
<div>
  <span
    onClick={[Function]}
    style={
      Object {
        "left": "0vw",
        "position": "relative",
        "top": "0vh",
      }
    }
  >
    Minimal Popover
  </span>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "grey",
          "marginTop": 50,
          "padding": 50,
        }
      }
    >
      Click this area will not close popper
    </div>
  </div>
</div>
`;

exports[`Storyshots Popper Minimal 1`] = `
<div>
  <span
    onClick={[Function]}
    style={
      Object {
        "left": "0vw",
        "position": "relative",
        "top": "0vh",
      }
    }
  >
    Minimal Popover
  </span>
</div>
`;

exports[`Storyshots Popper Nested 1`] = `
<div>
  <span
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "#6c757d",
        "borderRadius": ".3rem",
        "color": "#fff",
        "cursor": "pointer",
        "display": "inline-block",
        "left": "0vw",
        "margin": "10px 3px 10px 3px",
        "padding": 10,
        "position": "relative",
        "top": "0vh",
      }
    }
  >
    Nested popover
  </span>
  <br />
</div>
`;

exports[`Storyshots Popper Simple 1`] = `
<div>
  <span
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#6c757d",
        "borderRadius": ".3rem",
        "color": "#fff",
        "cursor": "pointer",
        "display": "inline-block",
        "left": "0vw",
        "margin": "10px 3px 10px 3px",
        "padding": 10,
        "position": "relative",
        "top": "0vh",
      }
    }
  >
    Simple Popover
  </span>
</div>
`;
